syntax = "proto3";
package username.hello.hello;

import "gogoproto/gogo.proto";
import "hello/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/username/hello/x/hello/types";

// GenesisState defines the hello module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
