syntax = "proto3";
package lavanet.lava.common;

option go_package = "github.com/lavanet/lava/common/types";
import "gogoproto/gogo.proto"; 

message Entry {
    string index = 1; // unique entry index (i.e. list key)
    uint64 block = 2; // block when the entry was created
    uint64 stale_at = 3; // block when the entry becomes stale
    uint64 refcount = 4; // reference count
    bytes data = 5; // the data saved in the entry
    uint64 delete_at = 6; // block when the entry becomes deleted
    bool is_latest = 7; // is this entry the latest entry now?
}

message RawMessage {
    bytes key = 1;
    bytes value = 2;
}
